--- a/HotelListing.Api/appsettings.Development.json
+++ b/HotelListing.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+   // "HotelListingDbConnectionString": "Server=localhost,1400;Database=HotelListingDb;User Id=sa;Password=passX#007;TrustServerCertificate=True;MultipleActiveResultSers=True; Encrypt=flase",
+    "HotelListingDbConnectionString":"server=(localdb)\\MSSQLLocalDB;Database=HotelListingDb;Trusted_Connection=True;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
